Fix columns overflow content cut off

--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -5,7 +5,6 @@
   padding: 3rem;
 
   display: flex;
-  justify-content: space-evenly;
   overflow: auto;
 }
 
